--- a/.gitignore
+++ b/.gitignore
@@ -178,3 +178,9 @@ Network Trash Folder
 Temporary Items
 .apdisk
 
+/.idea/codeStyles/codeStyleConfig.xml
+/.idea/compiler.xml
+/.idea/jarRepositories.xml
+/.idea/misc.xml
+/.idea/inspectionProfiles/Project_Default.xml
+/.idea/vcs.xml
